[dispatcher] checkpoint before cpdu-49t